# SimplePlayer

./: AudioDecoder.cpp  CMakeLists.txt  VideoDecoder.cpp  blockqueue.h  decoder.h  displaywidget.cpp  displaywidget.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  player.cpp  player.h  previewwidget.cpp  previewwidget.h  res.qrc  shapes.frag  shapes.vert  videoslider.cpp  videoslider.h  volume.cpp  volume.h  volume.ui
